build using gitenberg.travis

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,5 @@
 _repo: Ancient-Poems-Ballads-and-Songs-of-the-Peasantry-of-England_649
+_version: 0.1.0
 contributor:
   contributor:
     agent_name: Dixon, James Henry
